--- a/module 4/second.html
+++ b/module 4/second.html
@@ -1,3 +1,7 @@
+<!--
+we learn here about semantic html, learned header, main, footer, article, section, figure, figcaption
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
