module 7,8 are added

--- a/module 1/one.html
+++ b/module 1/one.html
@@ -1,5 +1,5 @@
 <!--
-learn here <p></p>  , <b></b> , <strong></strong> , <i></i> and <em></em> tag
+we learn here <p></p>  , <b></b> , <strong></strong> , <i></i> and <em></em> tag
 -->
 
 <p>Lorem ipsum dolor sit amet <b>consectetur</b> adipisicing elit. <strong>Accusantium</strong> veritatis omnis neque
