--- a/module25/seven.html
+++ b/module25/seven.html
@@ -1,3 +1,10 @@
+<!--
+We learned here about event bubbling, where triggering an event on a child also triggers its parent’s events.
+We learned about stopPropagation(), which stops the event from reaching the parent.
+We also learned about stopImmediatePropagation(), which stops both the parent’s event and any other event listeners on the same element.
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -40,7 +47,7 @@
       <li id="item-4">Quisquam, cum?</li>
       <li id="item-5">Eligendi, quas.</li>
       <li id="item-6">Minus, explicabo.</li>
-      </ul>
+    </ol>
   </section>
   <script>
 
