--- a/module25/three.html
+++ b/module25/three.html
@@ -21,26 +21,15 @@ we learned here about onclick event in button and addEventListener
       font-weight: 600;
       cursor: pointer;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      transition: all 0.8s ease;
+      transition: all 1s ease;
       margin: 20px;
     }
 
     .button:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
-      background: linear-gradient(135deg, #3425e0, #e405e4);
+      background: linear-gradient(135deg, #312ac0, #c800d2);
       transform: scale(1.1);
-    }
-
-    .button:active {
-      transform: translateY(0);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .button:disabled {
-      background: #9ca3af;
-      cursor: not-allowed;
-      box-shadow: none;
     }
   </style>
 
