--- a/module25/eight.html
+++ b/module25/eight.html
@@ -1,3 +1,7 @@
+<!--
+We learned here about event delegation, where instead of adding event listeners to multiple child elements, we add a single listener to their common parent, and use event bubbling to detect which child triggered the event.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,31 +9,114 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Delegate</title>
+  <style>
+    #container1 {
+      display: flex;
+      width: 90%;
+      margin: 10px auto;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f4f6fb;
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+    }
+
+    h1 {
+      color: #2c3e50;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    ol {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 320px;
+      padding: 20px;
+      margin-bottom: 20px;
+      border: 2px solid goldenrod;
+      padding-left: 30px;
+    }
+
+    li {
+      background: #e8f0fe;
+      margin: 8px 0;
+      padding: 10px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    li:hover {
+      background: #d0e1fd;
+      transform: scale(1.03);
+    }
+
+    button {
+      padding: 10px 18px;
+      border: none;
+      border-radius: 6px;
+      background: linear-gradient(135deg, #0078d7, #0053ba);
+      color: #fff;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+      transition: all 0.3s ease;
+      margin-bottom: 40px;
+      display: block;
+      margin: 10px auto;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      background: linear-gradient(135deg, #2d8cf0, #0066cc);
+    }
+  </style>
 </head>
 
 <body>
   <h1>Explore the concept of Event Delegate</h1>
-  <ol id="item-list">
-    <li class="item">My Awesome Item - 1</li>
-    <li class="item">My Awesome Item - 2</li>
-    <li class="item">My Awesome Item - 3</li>
-    <li class="item">My Awesome Item - 4</li>
-    <li class="item">My Awesome Item - 5</li>
-    <li class="item">My Awesome Item - 6</li>
-  </ol>
-  <button id="btn-add-item">Add new item</button>
+  <div id="container1">
+    <div>
+      <h2>The new items will not be deleted</h2>
+      <ol id="item-list">
+        <li class="item">My Awesome Item - 1</li>
+        <li class="item">My Awesome Item - 2</li>
+        <li class="item">My Awesome Item - 3</li>
+        <li class="item">My Awesome Item - 4</li>
+        <li class="item">My Awesome Item - 5</li>
+        <li class="item">My Awesome Item - 6</li>
+
+      </ol>
+      <button id="btn-add-item">Add new item</button>
+    </div>
 
 
 
-  <ol id="item-list2">
-    <li class="item2">My Awesome Item - 1</li>
-    <li class="item2">My Awesome Item - 2</li>
-    <li class="item2">My Awesome Item - 3</li>
-    <li class="item2">My Awesome Item - 4</li>
-    <li class="item2">My Awesome Item - 5</li>
-    <li class="item2">My Awesome Item - 6</li>
-  </ol>
-  <button id="btn-add-item2">Add new item</button>
+
+    <div>
+      <h2>The new items will be deleted too</h2>
+      <ol id="item-list2">
+        <li class="item2">My Awesome Item - 1</li>
+        <li class="item2">My Awesome Item - 2</li>
+        <li class="item2">My Awesome Item - 3</li>
+        <li class="item2">My Awesome Item - 4</li>
+        <li class="item2">My Awesome Item - 5</li>
+        <li class="item2">My Awesome Item - 6</li>
+
+      </ol>
+      <button id="btn-add-item2">Add new item</button>
+    </div>
+
+  </div>
   <script>
 
     const items = document.getElementsByClassName('item');
@@ -53,6 +140,9 @@
 
     document.getElementById('item-list2')
       .addEventListener('click', function (event) {
+        if (event.target.tagName === 'OL') {
+          return;
+        }
         event.target.parentNode.removeChild(event.target);
       });    // work for second ol
 
